css bugs and partial styling of snake game

--- a/dashboard/snake.html
+++ b/dashboard/snake.html
@@ -8,6 +8,21 @@
 </head>
 
 <body>
+    <header>
+        <div class="navbar">
+            <div class="logo"><img src="/pngs/Mokesell.png" alt="mainlogo"></div>
+            <nav>   
+                <ul>
+                    <a class="newf" href="/index.html">New & Featured</a>
+                    <a class="newf" href="/dashboard/Men.html">Men</a>
+                    <a class="newf" href="/dashboard/women.html">Women</a>
+                    <a class="newf" href="/dashboard/Kids.html">Kids</a>
+                    <a class="newf" href="/dashboard/Sale.html" >Sale</a>
+                    <a href="/dashboard/listing.html" id = "sellbutton" >Sell</a>
+                </ul>   
+            </nav>
+        </div>  
+    </header>
     <div id="snakeGame">
         <div id="food" class="food"></div>
     </div>
