--- a/dashboard/women.html
+++ b/dashboard/women.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mokesell New & Featured</title>
     <link rel="stylesheet" href="Women.css">
-    
+      
 </head>
 <body>
     <header>
         <div class="navbar">
-            <div class="logo"><img src="pngs/Mokesell.png" alt="mainlogo"></div>
+            <div class="logo"><img src="/pngs/Mokesell.png" alt="mainlogo"></div>
             <nav>   
                 <ul>
                     <a class="newf" href="/index.html">New & Featured</a>
