--- a/dashboard/Sale.html
+++ b/dashboard/Sale.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="navbar">
-            <div class="logo"><img src="pngs/Mokesell.png" alt="mainlogo"></div>
+            <div class="logo"><img src="/pngs/Mokesell.png" alt="mainlogo"></div>
             <nav>   
                 <ul>
                     <a class="newf" href="/index.html">New & Featured</a>
