--- a/dashboard/snake.html
+++ b/dashboard/snake.html
@@ -3,26 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ccb yx</title>
+    <title>Snake game</title>
     <link rel="stylesheet" href="/css/snake.css">
 </head>
 
 <body>
-    <header>
-        <div class="navbar">
-            <div class="logo"><img src="/pngs/Mokesell.png" alt="mainlogo"></div>
-            <nav>   
-                <ul>
-                    <a class="newf" href="/index.html">New & Featured</a>
-                    <a class="newf" href="/dashboard/Men.html">Men</a>
-                    <a class="newf" href="/dashboard/women.html">Women</a>
-                    <a class="newf" href="/dashboard/Kids.html">Kids</a>
-                    <a class="newf" href="/dashboard/Sale.html" >Sale</a>
-                    <a href="/dashboard/listing.html" id = "sellbutton" >Sell</a>
-                </ul>   
-            </nav>
-        </div>  
-    </header>
+    <div class="header">
+        <p>Snake Game</p>
+        <a href="/index.html"><p class="backBtn">Back</p></a>
+    </div>
     <div id="snakeGame">
         <div id="food" class="food"></div>
     </div>
@@ -31,4 +20,5 @@
     <div id="message"></div>
     <script src="/js/snake.js"></script>
 </body>
+
 </html>
