--- a/index.html
+++ b/index.html
@@ -10,67 +10,41 @@
 <body>
     <header>
         <div class="navbar">
-            <div class="logo"><img src="pngs/Mokesell.png" alt="mainlogo"></div>
+            <div class="logo">
+                <a href="/index.html">
+                    <img src="/pngs/Mokesell.png" alt="mainlogo">
+                </a>
+            </div>
             <nav>   
                 <ul>
                     <a class="newf" href="/index.html">New & Featured</a>
-                    <a class="newf" href="/dashboard/Men.html">Men</a>
-                    <a class="newf" href="/dashboard/women.html">Women</a>
-                    <a class="newf" href="/dashboard/Kids.html">Kids</a>
-                    <a class="newf" href="/dashboard/Sale.html" >Sale</a>
-                    <a href="dashboard/listing.html" id = "sellbutton" >Sell</a>
+                    <a class="newf" href="/index.html?category=men">Men</a>
+                    <a class="newf" href="/index.html?category=women">Women</a>
+                    <a class="newf" href="/index.html?category=kids">Kids</a>
+                    <a class="newf" href="/index.html?category=sale">Sale</a>
+                    <a class="newf" href="/cart.html">Cart</a>
+                    <a href="/dashboard/listing.html" id="sellbutton">Sell</a>
+
                 </ul>
             </nav>
-            <div class="profile-container">
-                <img src="pngs/profile.jpg" alt="Profile" class="profile-icon" onclick="toggleDropdown(event)">
-                <div class="dropdown" id="dropdownMenu">
-                    <button>Settings</button>
-                    <button onclick="logoutUser()">Logout</button>
-                </div>
-            </div>
-        </div>  
+            
+        </div>
     </header>
-
     <main>
-        <div class="headername">New & Featured</div>
-        <div class="listing-container">
+        <div id="listing-container" class="listing-container">
             <!-- to be filled with data -->
-              <!--Air Jordans 4 Retro Card-->
-            <div class="listing-card">
-                <a href="#">
-                    <img src="pngs/AIR+JORDAN+4+RETRO.png" class="JORDAN" alt="Black JORDANs">
-                </a>
-                <p>Air Jordan 4 Retro 'White Thunder</p>
+        </div>
+        <div class="snakeGameBtn">
+            <a href="/dashboard//snake.html"><img src="/pngs/snek.png"></a>
+        </div>
+        <div class="footer">
+            <hr class="line-footer">
+            <div class="footerstuff">
+                <p><a href="/aboutUs.html">About us</a></p>
+                <p><a href="/dashboard/feedback.html">Feedback</a></p>
+                <p><a href="/contactUs.html">Contact us</a></p>
             </div>
+            <p class="mokesellc">© 2025 Mokesell, Inc. All rights reserved</p>
         </div>
     </main>
-    <script>
-        // Function to toggle the dropdown visibility
-        function toggleDropdown() {
-            let dropdown = document.getElementById("dropdownMenu");
-
-            // Toggle the display of the dropdown menu
-            if (dropdown) {
-                dropdown.style.display = dropdown.style.display === "block" ? "none" : "block";
-            }
-        }
-
-        // Close the dropdown if clicked outside of the dropdown or profile icon
-        window.onclick = function(event) {
-            let dropdown = document.getElementById("dropdownMenu");
-
-            // Close dropdown if the click is outside the dropdown or profile icon
-            if (!event.target.matches('.profile-icon') && !event.target.closest('#dropdownMenu')) {
-                if (dropdown) {
-                    dropdown.style.display = "none";
-                }
-            }
-        };
-
-        // Logout function (you can customize this as per your requirement)
-        function logoutUser() {
-            // Redirecting to login page
-            window.location.href = "auth/login.html";  // Modify the URL as necessary
-        }
-    </script>
 </body>
