--- a/auth/login.html
+++ b/auth/login.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <header>
-        <div class="logo"><img src="/pngs/Mokesell.png" alt="mainlogo"></div> 
+        <div class="logo">
+            <a href="/index.html">
+                <img src="/pngs/Mokesell.png" alt="mainlogo">
+            </a>
+        </div>
     </header>
     <div class="container">
         <div class="logo"></div>
@@ -24,7 +28,7 @@
             <button id="login-button" type="submit">Login</button>
             <hr class="line2">
 
-            <h2>Don't have an account? <a href="Signup.html">Signup</a></h2>
+            <h2>Don't have an account? <a href="/auth/signup.html">Signup</a></h2>
         </form>
     </div>
 </body>
