--- a/auth/signup.html
+++ b/auth/signup.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <header>
-        <div class="logo"><img src="/pngs/Mokesell.png" alt="mainlogo"></div> 
+        <div class="logo">
+            <a href="/index.html">
+                <img src="/pngs/Mokesell.png" alt="mainlogo">
+            </a>
+        </div>
     </header>
     <div class="container">
         <div class="logo"></div>
@@ -27,7 +31,7 @@
             <button id="signup-button" type="submit">Sign up</button>
             <hr class="line2">
 
-            <h2>Already have an account?<a href="Login.html">Login</a></h2>
+            <h2>Already have an account?<a href="/auth/login.html">Login</a></h2>
         </form>
     </div>
 </body>
